--- a/index/model.html
+++ b/index/model.html
@@ -88,7 +88,10 @@
 
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
-<div style="width:100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+<!-- 
+    
+    /*超过篇幅使用*/
+    <div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
     <br>
     <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
       <tbody>
@@ -99,14 +102,44 @@
           </td>
           <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
             <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
-              <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
-            </a>
+                <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+              </a>
           </td>
         </tr>
       </tbody>
     </table>
     <br>
-  </div>
+</div>
+
+-->
+
+
+
+<!--
+/*未超过篇幅or篇幅不足使用*/-->
+
+
+<div style="width: 100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+  <br>
+  <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
+    <tbody>
+      <tr> 
+        <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+           Copyright &copy; All Rights Reserved <br>
+           2023 - Computer Science and Medical Interdisciplinary Engineering
+        </td>
+        <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
+          <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
+              <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+            </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br>
+</div>
+
+
 
 
 
