--- a/index/timetable.html
+++ b/index/timetable.html
@@ -254,7 +254,7 @@
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
 
-<div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;"></div>
+<div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
     <br>
     <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
       <tbody>
@@ -265,17 +265,13 @@
           </td>
           <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
             <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
-              <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
-            </a>
+                <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+              </a>
           </td>
         </tr>
       </tbody>
     </table>
     <br>
-  </div>
-
-
-
-
+</div>
 </body>
 </html>
