--- a/index/Select.html
+++ b/index/Select.html
@@ -3,6 +3,7 @@
 <head profile="http://gmpg.org/xfn/11">
 <link rel="shortcut icon" href="CSE-MED">
 <title>Department of Computer Science and Medical Interdisciplinary Engineering</title>
+<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="imagetoolbar" content="no" />
 <link rel="stylesheet" href="css/layout.css" type="text/css" />
