--- a/index.html
+++ b/index.html
@@ -227,29 +227,29 @@
     <!-- ####################################################################################################### -->
   </div>
 </div>
-
+<br><br><br><br><br>
 
 <!----CopyRight-->
 
-  <div style="width:100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
-    <br>
-    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
-      <tbody>
-        <tr> 
-          <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
-             Copyright &copy; All Rights Reserved <br>
-             2023 - Computer Science and Medical Interdisciplinary Engineering
-          </td>
-          <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
-            <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
+<div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+  <br>
+  <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
+    <tbody>
+      <tr> 
+        <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+           Copyright &copy; All Rights Reserved <br>
+           2023 - Computer Science and Medical Interdisciplinary Engineering
+        </td>
+        <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
+          <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
               <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
             </a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <br>
-  </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br>
+</div>
 
 
 
