--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   </td>
                   <td style="width: 50%;">
                     <div style="text-align: right;">
-                      <a href="Quicklink.html" style="color: black;text-decoration: none;" target="_blank" >
+                      <a href="Quicklink.html" style="color: black;text-decoration: none;">
                         <img src="image/添加_add.png" alt="Newterm" width="14" height="14">
                       </a>
                     </div>
