--- a/Canvas/Homepage/FL2203.html
+++ b/Canvas/Homepage/FL2203.html
@@ -157,20 +157,24 @@
 									<thead>
 										<tr>
 											<th width="5%"><div align="center">Week</div></th>
-											<th width="10%"><div align="center">Date </div></th>
-											<th width="25%"><div align="center">Lecture/Recitation</div></th>
-											<th width="30%"><div align="center">Assignment</div></th>
-											<th width="10%"><div align="center">Remark</div></th>
+											<th width="8%"><div align="center">Date </div></th>
+											<th width="10%"><div align="center">Vocabulary</div></th>
+											<th width="10%"><div align="center">Reading</div></th>
+											<th width="10%"><div align="center">Listening</div></th>
+											<th width="10%"><div align="center">Writing</div></th>
+											<th width="30%"><div align="center">Remark</div></th>
 										</tr>
 									</thead>
 
 									<tbody>
 										<tr style="background-color:#CCEED0 ;">
-											<td width="5%"><div align="center">1/2</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">2/10-2/21</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;">PTE</div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;">PTE</div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;">
+											<td><div align="center">1/2</div></td>
+											<td><div align="left" style="padding-left: 15px;">2/10-2/21</div></td>
+											<td><div align="left" style="padding-left: 15px;">PTE</div></td>
+											<td><div align="left" style="padding-left: 15px;">PTE</div></td>
+											<td><div align="left" style="padding-left: 15px;">PTE</div></td>
+											<td><div align="left" style="padding-left: 15px;">PTE</div></td>
+											<td><div align="left" style="padding-left: 15px;">
 												<a href="https://ikkedu.com/home/#/index/practiceall/reading" target="_blank" style="text-decoration:none;color: blue;">
 													PTE Onlinejudge (FIB-R/FIB-RW)
 												</a>
@@ -190,89 +194,119 @@
 										</tr>
 										
 										<tr>
-											<td width="5%"><div align="center">3</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">2/27-3/5</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="center">3</div></td>
+											<td><div align="left" style="padding-left: 15px;">2/27-3/5</div></td>
+											<td><div align="left" style="padding-left: 15px;">None</div></td>
+											<td><div align="left" style="padding-left: 15px;">None</div></td>
+											<td><div align="left" style="padding-left: 15px;">None</div></td>	
+											<td><div align="left" style="padding-left: 15px;">None</div></td>
+											<td><div align="left" style="padding-left: 15px;">None</div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">4</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">3/6-3/12</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightcyan;">
+											<td><div align="center" >4</div></td>
+											<td><div align="left" style="padding-left: 15px;">3/6-3/12</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+												CET-6 Study Guide 1<br>
+											</div></td>
+											<td><div align="left" style="padding-left: 15px;">RD*3/LR*1/FIB*2</div></td>
+											<td><div align="left" style="padding-left: 15px;">Model Test 1/2/3</div></td>
+											<td><div align="left" style="padding-left: 15px;">Topic 3/4/5/7/9</div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">5</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">3/13-3/19</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr  style="background-color:lightcyan;">
+											<td><div align="center">5</div></td>
+											<td><div align="left" style="padding-left: 15px;">3/13-3/19</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+												CET-6 Study Guide 2<br>
+											</div></td>
+											<td><div align="left" style="padding-left: 15px;">RD*3/LR*1/FIB*2</div></td>
+											<td><div align="left" style="padding-left: 15px;">Model Test 4/5/6</div></td>	
+											<td><div align="left" style="padding-left: 15px;">Topic 29/30/31/32/33</div></td>
+											<td><div align="left" style="padding-left: 15px;">Quiz 1</div></td>	
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">6</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">3/20-3/26</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightcyan;">
+											<td><div align="center">6</div></td>
+											<td><div align="left" style="padding-left: 15px;">3/20-3/26</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+												CET-6 Study Guide 3<br>
+											</div></td>
+											<td><div align="left" style="padding-left: 15px;">RD*3/LR*1/FIB*2</div></td>
+											<td><div align="left" style="padding-left: 15px;">Model Test 7/8/9</div></td>
+											<td><div align="left" style="padding-left: 15px;">Topic 34/35/36/37/38</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">7</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">3/27-4/2</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightcyan;">
+											<td><div align="center">7</div></td>
+											<td><div align="left" style="padding-left: 15px;">3/27-4/2</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+												CET-6 Study Guide 4<br>
+											</div></td>
+											<td><div align="left" style="padding-left: 15px;">RD*3/LR*1/FIB*2</div></td>
+											<td><div align="left" style="padding-left: 15px;">Model Test 10/11/12</div></td>
+											<td><div align="left" style="padding-left: 15px;">Topic 39/40/41/42/44</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">8</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">4/3-4/9</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightcyan;">
+											<td><div align="center">8</div></td>
+											<td><div align="left" style="padding-left: 15px;">4/3-4/9</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+												CET-6 Study Guide 5<br>
+											</div></td>
+											<td><div align="left" style="padding-left: 15px;">RD*3/LR*1/FIB*2</div></td>
+											<td><div align="left" style="padding-left: 15px;">Model Test 13/14/15</div></td>
+											<td><div align="left" style="padding-left: 15px;">Topic 45/51/53/55/57</div></td>
+											<td><div align="left" style="padding-left: 15px;">Midterm</div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">9</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">4/10-4/16</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightpink;">
+											<td><div align="center">9</div></td>
+											<td><div align="left" style="padding-left: 15px;">4/10-4/16</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">10</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">4/17-4/23</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightpink;">
+											<td><div align="center">10</div></td>
+											<td><div align="left" style="padding-left: 15px;">4/17-4/23</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">11</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">4/24-4/30</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightpink;">
+											<td><div align="center">11</div></td>
+											<td><div align="left" style="padding-left: 15px;">4/24-4/30</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">12</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/1-5/7</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightpink;">
+											<td><div align="center">12</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/1-5/7</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 										<tr style="background-color: antiquewhite;">
-											<td width="5%"><div align="center">12</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/7</div></td>
-											<td colspan="2"><div align="center">2023 National English Competitionfor College Students</div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;">
+											<td><div align="center">12</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/7</div></td>
+											<td colspan="4"><div align="center">2023 National English Competitionfor College Students</div></td>
+											<td><div align="left" style="padding-left: 15px;">
 												<p id="timer">
 													<script type="text/javascript" style="color: #000000;">
 														var countDownDate = new Date("May 7, 2023 0:00:00").getTime();
@@ -302,51 +336,62 @@
 											</div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">13</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/8-5/14</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr  style="background-color:lightyellow;">
+											<td><div align="center">13</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/8-5/14</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">14</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/15-5/21</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightyellow;">
+											<td><div align="center">14</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/15-5/21</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">15</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/22-5/28</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightyellow;">
+											<td><div align="center">15</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/22-5/28</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">16</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">5/29-6/4</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightyellow;">
+											<td><div align="center">16</div></td>
+											<td><div align="left" style="padding-left: 15px;">5/29-6/4</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
-										<tr>
-											<td width="5%"><div align="center">17</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">6/5-6/11</div></td>
-											<td width="25%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;"></div></td>	
+										<tr style="background-color:lightyellow;">
+											<td><div align="center">17</div></td>
+											<td><div align="left" style="padding-left: 15px;">6/5-6/11</div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>	
+											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;"></div></td>
 										</tr>
 
 										<tr style="background-color: antiquewhite;">
-											<td width="5%"><div align="center">18</div></td>
-											<td width="10%"><div align="left" style="padding-left: 15px;">6/17</div></td>
-											<td colspan="2"><div align="center">College English Test Band Six</div></td>
-											<td width="30%"><div align="left" style="padding-left: 15px;">
+											<td><div align="center">18</div></td>
+											<td><div align="left" style="padding-left: 15px;">6/17</div></td>
+											<td colspan="4"><div align="center">College English Test Band Six</div></td>
+											<td><div align="left" style="padding-left: 15px;">
+											
 											</div></td>
 										</tr>
 
