--- a/Canvas/Homepage/FL2203.html
+++ b/Canvas/Homepage/FL2203.html
@@ -266,7 +266,7 @@
 										<tr style="background-color:lightpink;">
 											<td><div align="center">9</div></td>
 											<td><div align="left" style="padding-left: 15px;">4/10-4/16</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 11/12/13</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -276,7 +276,7 @@
 										<tr style="background-color:lightpink;">
 											<td><div align="center">10</div></td>
 											<td><div align="left" style="padding-left: 15px;">4/17-4/23</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 14/15/16</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -286,7 +286,7 @@
 										<tr style="background-color:lightpink;">
 											<td><div align="center">11</div></td>
 											<td><div align="left" style="padding-left: 15px;">4/24-4/30</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 17/18/19</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -296,7 +296,7 @@
 										<tr style="background-color:lightpink;">
 											<td><div align="center">12</div></td>
 											<td><div align="left" style="padding-left: 15px;">5/1-5/7</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 20/21/22</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -339,7 +339,11 @@
 										<tr  style="background-color:lightyellow;">
 											<td><div align="center">13</div></td>
 											<td><div align="left" style="padding-left: 15px;">5/8-5/14</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 1/2/3/4 | 
+												<a href="" target="_blank" style="text-decoration:none;color: blue;">
+													SPW 1
+												</a>
+											</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -349,7 +353,10 @@
 										<tr style="background-color:lightyellow;">
 											<td><div align="center">14</div></td>
 											<td><div align="left" style="padding-left: 15px;">5/15-5/21</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 5/6/7/8 | 
+												<a href="" target="_blank" style="text-decoration:none;color: blue;">
+													SPW 2
+												</a></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -359,7 +366,10 @@
 										<tr style="background-color:lightyellow;">
 											<td><div align="center">15</div></td>
 											<td><div align="left" style="padding-left: 15px;">5/22-5/28</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL 9/10&ensp;&ensp;&ensp;| 
+												<a href="" target="_blank" style="text-decoration:none;color: blue;">
+													SPW 3
+												</a></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
@@ -369,7 +379,7 @@
 										<tr style="background-color:lightyellow;">
 											<td><div align="center">16</div></td>
 											<td><div align="left" style="padding-left: 15px;">5/29-6/4</div></td>
-											<td><div align="left" style="padding-left: 15px;"></div></td>
+											<td><div align="left" style="padding-left: 15px;">GWL SP Words</div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>
 											<td><div align="left" style="padding-left: 15px;"></div></td>	
 											<td><div align="left" style="padding-left: 15px;"></div></td>
