--- a/Canvas/Homepage/SP1201.html
+++ b/Canvas/Homepage/SP1201.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <title>Chinese Mathematics Competitions</title>
-		<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
         <meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
@@ -26,34 +25,7 @@
                         </td>
                         <td width="40%" valign="middle" style="word-break: break-all;" align="right" bgcolor="#0099cc" id="Rhead">								
 							<b>
-								<p id="timer">
-									<script type="text/javascript" style="color: #000000;">
-										var countDownDate = new Date("Nov 11, 2023 0:00:00").getTime();
-										var x = setInterval(
-											function() {
-												// Get todays date and time
-												var now = new Date().getTime();
-												// Find the distance between now an the count down date
-												var distance = countDownDate - now;
-												// Time calculations for days, hours, minutes and seconds
-												var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-												var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-												var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-												var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-												// Output the result in an element with id="timer"
-												document.getElementById("timer").innerHTML = days + "d " + hours + "h "
-												+ minutes + "min " + seconds + "s ";
-												// If the count down is over, write some text 
-												if (distance < 0) {
-													clearInterval(x);
-													document.getElementById("timer").innerHTML = "EXPIRED";
-												}
-											}, 
-										1000);
-									</script>
-								</p>
 								
-								To Go Before 2023 CMC
 							</b> 
                         </td>
                     </tr>     
@@ -98,7 +70,7 @@
                                                                 </tr>
                                                                 <tr>
                                                                     <td valign="top"><div align="right"><b>Credit</b></div></td>
-                                                                    <td ><div align="left">9 Units</div></td>
+                                                                    <td ><div align="left">12 Units</div></td>
                                                                 </tr>	
                                                                 
                                                                 <tr>
@@ -285,20 +257,20 @@
 				</tr> 
 
 <!-- Archnowledge -->		
-<tr bgcolor="#999999" height="20px">
-	<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
-		<font style="font-size: 12px;">
-			<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
-			<b><a href="https://computersciencekaoyan.github.io/Canvas/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
-			<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
-			<br>
-			Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
-			<br>
-			Copyright © 2023 Department of Computer Science and Medical Interdisciplinary Engineering&ensp;|&ensp;
-			Last modified Feburary 26, 2023
-		</font>
-	</td>
-</tr>
+				<tr bgcolor="#999999" height="20px">
+					<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
+						<font style="font-size: 12px;">
+							<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
+							<b><a href="https://computersciencekaoyan.github.io/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
+							<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
+							<br>
+							Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
+							<br>
+							Copyright © 2023 Department of Computer Science and Medical Interdisciplinary Engineering&ensp;|&ensp;
+							Last modified January 19, 2023
+						</font>
+					</td>
+				</tr>
 
 
 <!-- End Archnowledge -->
