--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -129,7 +129,30 @@
 								<hr>						
 
 	<!--Outline-->
-							<h3>Outline</h3>
+	<table cellspacing="0" border="0" cellpadding="0" Border-spacing="10px" style="width: 100%;padding-top: 20px;padding-bottom: 20px;">
+		<tbody>
+			<tr>
+				<td style="width: 90%;">
+					<h3>Outline</h3>
+				</td>
+
+				<td style="width: 3%;background-color:lightyellow;font-size: smaller;text-align: center;font-weight: bold;color: red;">
+					TODO
+				</td >
+				<td style="width: 2%;">
+					&ensp;
+				</td>
+				<td style="width: 3%;background-color: #DDF8FF;font-size: smaller;text-align: center;font-weight: bold;">
+					DONE
+				</td>
+				<td style="width: 2%;">
+					&ensp;
+				</td>
+
+			</tr>
+
+		</tbody>
+	</table>
 							<hr>
 							<br>
 							<p>
@@ -144,7 +167,7 @@
 										</tr>
 									</thead>
 
-									<tbody>
+									<tbody style="background-color:lightyellow;">
 										<tr>
 											<td width="10%"><div align="center">4/3</div></td>
 											<td width="30%"><div align="center">Chapter 1 Revision</div></td>
