--- a/Canvas/Homepage/curriculum-ms.html
+++ b/Canvas/Homepage/curriculum-ms.html
@@ -128,7 +128,31 @@
 								<hr>						
 
 	<!--Outline-->
-							<h3>Outline</h3>
+							<table cellspacing="0" border="0" cellpadding="0" Border-spacing="10px" style="width: 100%;padding-top: 20px;padding-bottom: 20px;">
+								<tbody>
+									<tr>
+										<td style="width: 90%;">
+											<h3>Outline</h3>
+										</td>
+
+										<td style="width: 3%;background-color: antiquewhite;font-size: smaller;text-align: center;font-weight: bold;color: red;">
+											TODO
+										</td >
+										<td style="width: 2%;">
+											&ensp;
+										</td>
+										<td style="width: 3%;background-color: lightcyan;font-size: smaller;text-align: center;font-weight: bold;">
+											DONE
+										</td>
+										<td style="width: 2%;">
+											&ensp;
+										</td>
+
+									</tr>
+
+								</tbody>
+							</table>
+							
 							<hr>
 							<br>
 							<p>
