--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -236,11 +236,13 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.9</td>
                                             <td>2.5-2.6</td>
                                             <td>4</td>
-                                            <td>*</td>
+                                            <td><a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/MATH1205%20Linear%20Algebra/%E5%B9%B3%E6%97%B6%E4%BD%9C%E4%B8%9A/hw2%202023.03.09%20%E7%9F%A9%E9%98%B51/3.9%E4%BD%9C%E4%B8%9A.pdf" target="_blank" style="text-decoration:none;color: blue;">
+                                                Link
+                                            </a></td>
                                             <td></td>
                                             </tr>
 
