--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       -->
       <div style="background-color:lightcyan;font-family: 微软雅黑;">
         <b style="color: red;">邮箱快速链接：</b>
-        <a href="https://mail.sjtu.edu.cn/zimbra/mail#1" style="color: black;text-decoration:none;background-color: lightcyan;">Zimbra@SJTU</a> &ensp;&ensp;&ensp;&ensp;&ensp;
-        <a href="https://mail.163.com/js6/main.jsp?sid=cBHHoacPmGwwovBkucPPMeVrFYVVybMP&df=mail163_letter#module=mbox.ListModule%7C%7B%22filter%22%3A%7B%22flags%22%3A%7B%22read%22%3Afalse%7D%7D%2C%22order%22%3A%22date%22%2C%22desc%22%3Atrue%2C%22fids%22%3A%5B1%2C3%2C18%5D%7D" style="color: black;background-color: lightcyan;text-decoration: none;">163.com</a>
+        <a href="https://mail.sjtu.edu.cn/zimbra/mail#1" style="color: black;text-decoration:none;background-color: lightcyan;" target="_blank">Zimbra@SJTU</a> &ensp;&ensp;&ensp;&ensp;&ensp;
+        <a href="https://mail.163.com/js6/main.jsp?sid=cBHHoacPmGwwovBkucPPMeVrFYVVybMP&df=mail163_letter#module=mbox.ListModule%7C%7B%22filter%22%3A%7B%22flags%22%3A%7B%22read%22%3Afalse%7D%7D%2C%22order%22%3A%22date%22%2C%22desc%22%3Atrue%2C%22fids%22%3A%5B1%2C3%2C18%5D%7D" style="color: black;background-color: lightcyan;text-decoration: none;" target="_blank">163.com</a>
       </div>
       <br>
       <div id="content">
