--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -250,7 +250,9 @@
                                             <td>2023.3.10</td>
                                             <td>2.7</td>
                                             <td>3</td>
-                                            <td>第二章习题</td>
+                                            <td>第二章习题/<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/MATH1205%20Linear%20Algebra/%E5%B9%B3%E6%97%B6%E4%BD%9C%E4%B8%9A/hw3%202023.03.10%20%E7%9F%A9%E9%98%B52.pdf" target="_blank" style="text-decoration:none;color: blue;">
+                                                Link
+                                            </a></td>
                                             <td></td>
                                             </tr>
 
