--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -246,7 +246,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.10</td>
                                             <td>2.7</td>
                                             <td>3</td>
