--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -174,7 +174,7 @@
 									</thead>
 
 									<tbody style="background-color:lightyellow;">
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/4</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">线性结构1</div></td>
 											<td width="30%"><div align="center">After Class Reading /
@@ -185,7 +185,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 										
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/5</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">线性结构2</div></td>
 											<td width="30%"><div align="center">After Class Reading /
@@ -196,7 +196,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/8</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">线性结构3</div></td>
 											<td width="30%"><div align="center">After Class Reading /
