--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -326,9 +326,9 @@
 							</h3>
 							<hr>
 
-							<h4>Lab1 Vector:https://github.com/ACMClassCourse-2022/STLite_Honor</h4>
+							<h4>Lab1 Vector:<a href="https://github.com/ACMClassCourse-2022/STLite_Honor">Link</a><div style="color: red;font-weight: bold;">已发布</div></h4>
 							<div style="background-color: #DDF8FF;">2023-03-05（第 3 周周日）~ 2023-03-19（第 5 周周日）</div>
-							<div style="color: red;font-weight: bold;">已发布</div>
+							
 							<h4>
 								Lab2 List
 							</h4>
