--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -206,7 +206,7 @@
 											<td width="10%"><div align="center">3.9</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论4-运算符重载</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">流插入运算符重载未涉及</div></td>	
 										</tr>
 
                                         <tr>
