--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -328,7 +328,8 @@
 
 							<h4>Lab1 Vector:<a href="https://github.com/ACMClassCourse-2022/STLite_Honor">Link</a><div style="color: red;font-weight: bold;">已发布</div></h4>
 							<div style="background-color: #DDF8FF;">2023-03-05（第 3 周周日）~ 2023-03-19（第 5 周周日）</div>
-							
+							<b>Reference</b><br>
+							<a href="https://doc.qt.io/qt-5/qlist-iterator.html#operator-eq-eq-1">iterator Class-class QList::iterator</a>
 							<h4>
 								Lab2 List
 							</h4>
