--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -226,7 +226,7 @@
 													Lab
 												</a>
 											</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">5.5.1-5.5.3</div></td>	
 										</tr>
 
 										<tr>
