--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -209,7 +209,7 @@
 											<td width="30%"><div align="center">流插入运算符重载未涉及</div></td>	
 										</tr>
 
-                                        <tr>
+                                        <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.11</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论5-继承</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
