--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -256,7 +256,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.11</td>
                                             <td>第二章习题</td>
                                             <td>5</td>
