--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -212,16 +212,17 @@
                                         <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.11</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论5-继承</div></td>
-											<td width="30%"><div align="center">Lab 1</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">
+											<a href="https://e.leetcode.cn/assessment/xpupylgbuylq-0002/login/0449efae-7de5-4090-a754-eccbd9e33c40" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
+												问题求解与实践第〇次机考 (2023-03-12~2023-03-19)
+											</a></div></td>
+											<td width="30%"><div align="center">不计分</div></td>	
 										</tr>
                                         <tr>
 											<td width="10%"><div align="center">3.15</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论6-多态</div></td>
 											<td width="30%"><div align="center">
-												<a href="https://e.leetcode.cn/assessment/xpupylgbuylq-0002/login/0449efae-7de5-4090-a754-eccbd9e33c40" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
-													第一次小作业 (2023-03-12~2023-03-19)
-												</a>
+												Lab1
 											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
