--- a/Canvas/canvas.html
+++ b/Canvas/canvas.html
@@ -182,7 +182,7 @@
 												style="color:#F8971C; "
 												style="color:#F0592B; "
 												></style>
-											<div style=" width: 99%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+											<!--<div style=" width: 99%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 											text-align: left;float: left;margin-right: 10px;padding: 5px;">
 													<div style="color: #000;font-size: 20px;height: 20px;font-weight: bolder;">
 														<p><a title="来自教务处的消息" style="cursor: pointer; color:black" onclick="viewXmInfo('${var.OMP_XM_ID}');">来自教务处的消息</a></p>
@@ -195,7 +195,7 @@
 													</div>
 											</div>
 											
-											<br><br><br><br><br><br><br><br>
+											<br><br><br><br><br><br><br><br>-->
 
 											<div class="cardBox">
 												<div class="headerBox" style="background-color: #FDC010;">
