--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -165,7 +165,7 @@
 							<hr>
 							<br>
                             <div style="background-color:lightpink ;">
-                                <div style="color: red;font-weight: bold;">
+                                <div style="color: blue;font-weight: bold;">
                                     通知：2022.03.18-小测（一） 占比10% 详情见课程大纲下载区下载，请准时参加考试！
                                 </div>
                             </div>
@@ -320,8 +320,8 @@
                                                 <a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/MATH1205%20Linear%20Algebra/%E7%BA%BF%E6%80%A7%E4%BB%A3%E6%95%B0%E5%B0%8F%E6%B5%8B%E8%AF%95%E5%8D%B72023.03.pdf" target="_blank" style="text-decoration:none;color: blue;font-weight: bold;">
                                                     小测1试卷
                                                 </a>
-                                                &ensp;&ensp;&ensp;
-                                                <a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/MATH1205%20Linear%20Algebra/%E7%BA%BF%E6%80%A7%E4%BB%A3%E6%95%B0%E5%B0%8F%E6%B5%8B%E7%AD%94%E6%A1%882023.03.pdf" target="_blank" style="text-decoration:none;color: blue;font-weight: bold;">
+                                                &ensp;
+                                                <a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/MATH1205%20Linear%20Algebra/%E7%BA%BF%E6%80%A7%E4%BB%A3%E6%95%B0%E5%B0%8F%E6%B5%8B%E7%AD%94%E6%A1%882023.03.pdf" target="_blank" style="text-decoration:none;color: red;font-weight: bold;">
                                                     小测1答案
                                                 </a>
                                             </td>
