--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -158,7 +158,7 @@
 							<p>
 							<div>
 								<table class="profile" cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px">
-									<thead>
+									<thead style="background-color: lightgray;">
 										<tr>
 											<th width="10%"><div align="center">Date </div></th>
 											<th width="30%"><div align="center">Lecture/Recitation</div></th>
