--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -164,7 +164,7 @@
 							<p>
 							<div>
 								<table class="profile" cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px">
-									<thead>
+									<thead style="background-color: lightgray;">
 										<tr>
 											<th width="10%"><div align="center">Date </div></th>
 											<th width="30%"><div align="center">Lecture/Recitation</div></th>
@@ -327,8 +327,8 @@
 							<h3>
 								Project / Lab
 							</h3>
-
 							<hr>
+							<br style="line-height: 9px;">
 
 							<table class="profile" cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px">
 								<thead>
