--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -178,7 +178,7 @@
 							<div>
 								<table class="profile" cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px">
 									<thead>
-										<tr>
+										<tr style="background-color: lightgray;">
 											<th width="10%"><div align="center">Date </div></th>
 											<th width="30%"><div align="center">Lecture/Recitation</div></th>
 											<th width="30%"><div align="center">Assignment</div></th>
