--- a/Canvas/Homepage/FL2203.html
+++ b/Canvas/Homepage/FL2203.html
@@ -178,7 +178,7 @@
 							<div>
 								<table class="profile" cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px">
 									<thead>
-										<tr>
+										<tr style="background-color: lightgray;">
 											<th width="5%"><div align="center">Week</div></th>
 											<th width="8%"><div align="center">Date </div></th>
 											<th width="10%"><div align="center">Vocabulary</div></th>
