--- a/Canvas/canvas.html
+++ b/Canvas/canvas.html
@@ -151,7 +151,7 @@
 																  	<div class="dropdown-content" id="myDropdown">
 																		<a href="canvas.html">CardView</a>
 																		<a href="listview.html">ListView</a>
-																		<a href="Homepage/0x00.studentenquiry.html">Enquiry</a>
+																		<a href="Homepage/0x00.studentenquiry.html" target="_blank">Enquiry</a>
 																  	</div>
 																</div> 
 															</div>
