--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -218,7 +218,7 @@
 											</a></div></td>
 											<td width="30%"><div align="center">不计分</div></td>	
 										</tr>
-                                        <tr>
+                                        <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.15</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论6-多态</div></td>
 											<td width="30%"><div align="center">
@@ -228,7 +228,7 @@
 										</tr>
 
                                         <tr>
-											<td width="10%"><div align="center">3.18</div></td>
+											<td width="10%"><div align="center">3.17</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论7-输入输出和模板</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
 											<td width="30%"><div align="center"></div></td>	
