--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -295,7 +295,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr >
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.15</td>
                                             <td>3.3、辅导讲义</td>
                                             <td>3</td>
@@ -303,7 +303,7 @@
                                             <td>理论课1+习题课2</td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.16</td>
                                             <td>第三章习题课</td>
                                             <td>3</td>
