--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             </table>
           </h2>
           <ul>
-            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E7%97%85%E7%90%86%E5%AD%A6%E4%B8%8E%E7%97%85%E7%90%86%E7%94%9F%E7%90%86%E5%AD%A6%E6%80%BB%E8%AE%BA" style="color: black;text-decoration: none;" target="_blank" >病理学与病理生理学总论资料</a></li>
-            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E5%8C%BB%E5%AD%A6%E8%8B%B1%E8%AF%AD" style="color: black;text-decoration: none;" target="_blank" >医学英语期末复习学案</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM211%20%E7%97%85%E5%8E%9F%E7%94%9F%E7%89%A9%E5%AD%A6" style="color: black;text-decoration: none;" target="_blank" >病原生物学</a></li>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM213%20%E9%A2%84%E9%98%B2%E5%8C%BB%E5%AD%A6" style="color: black;text-decoration: none;" target="_blank" >预防医学</a></li>
           </ul>
         </div>
         
