--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -232,7 +232,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr  style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/18</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">Chapter 6: 6.1-6.3</div></td>
 											<td width="30%"><div align="center">After Class Reading /
@@ -243,7 +243,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/19</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">Chapter 6: 6.4</div></td>
 											<td width="30%"><div align="center">After Class Reading /
@@ -254,7 +254,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-										<tr>
+										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/22</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">Chapter 7: 7.1-7.3.2</div></td>
 											<td width="30%"><div align="center">After Class Reading /
