--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -311,7 +311,7 @@
                                             <td>自习</td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.17</td>
                                             <td>第三章习题课</td>
                                             <td>3</td>
@@ -327,7 +327,7 @@
                                             </td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.19</td>
                                             <td>4.1-4.3</td>
                                             <td>3</td>
@@ -335,7 +335,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.20</td>
                                             <td>4.4</td>
                                             <td>3</td>
@@ -343,7 +343,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.21</td>
                                             <td>5.1</td>
                                             <td>3</td>
@@ -351,7 +351,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.22</td>
                                             <td>5.2-5.3</td>
                                             <td>5</td>
