--- a/index.html
+++ b/index.html
@@ -108,13 +108,29 @@
               <td style="width: 50%;"valign="top">
                 <div id="top_featured" class="clear">
                   <h2>
-                    <font face="微软雅黑">学期信息</font>
+                    <table style="width: 100%;">
+                      <tbody>
+                        <tr>
+                          <td style="width: 50%;">
+                              <font face="微软雅黑">学期信息</font> 
+                          </td>
+                          <td style="width: 50%;">
+                            <div style="text-align: right;">
+                              <a href="index/overall.html" style="color: black;text-decoration: none;">
+                                <img src="image/添加_add.png" alt="Newterm" width="14" height="14">
+                              </a>
+                            </div>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </h2>
                   <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
                     <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" style="color: black;text-decoration: none;" target="_blank" >培养方案查询</a></li>
                     <li><a href="index/calendar.html" style="color: black;text-decoration: none;">2022-2023年校历查询</a></li>
                     <li><a href="index/exam-time.html" style="color: black;text-decoration: none;">2022-2023-2考试时间查询</a> </li>
                     <li><a href="index/Select.html" style="color: black;text-decoration: none;">2022-2023-2学生选课通知</a> </li>
+
                   </ul>
                   &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 </div>
