--- a/Canvas/Homepage/CS2309.html
+++ b/Canvas/Homepage/CS2309.html
@@ -241,7 +241,7 @@
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
-                                        <tr>
+                                        <tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3.25</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">理论9-标准模板库STL(二)</div></td>
 											<td width="30%"><div align="center">Lab 1</div></td>
