--- a/Canvas/Homepage/MATH1205.html
+++ b/Canvas/Homepage/MATH1205.html
@@ -359,7 +359,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.25</td>
                                             <td>第六章</td>
                                             <td>4</td>
@@ -367,7 +367,7 @@
                                             <td></td>
                                             </tr>
 
-                                            <tr>
+                                            <tr style="background-color: lightcyan;">
                                             <td>2023.3.26</td>
                                             <td>第六章习题</td>
                                             <td>4</td>
